--- a/.obsidian/snippets/general.css
+++ b/.obsidian/snippets/general.css
@@ -1,12 +1,22 @@
-.markdown-preview-view h2, .markdown-preview-view h3, .markdown-preview-view h4, .markdown-preview-view h5, .markdown-preview-view h6 {
-    margin-bottom: 0;
+.markdown-preview-view h2,
+.markdown-preview-view h3,
+.markdown-preview-view h4,
+.markdown-preview-view h5,
+.markdown-preview-view h6 {
+  margin-bottom: 0;
 }
 
-div>ol, div>ul {
-    margin-top: 0;
+div > ol,
+div > ul {
+  margin-top: 0;
 }
 
-.markdown-preview-view .table-view-table>tbody>tr>td, .markdown-source-view.mod-cm6 .table-view-table>tbody>tr>td {
-    max-width: var(--max-col-width);
-    vertical-align: top;
+.markdown-preview-view .table-view-table > tbody > tr > td,
+.markdown-source-view.mod-cm6 .table-view-table > tbody > tr > td {
+  max-width: var(--max-col-width);
+  vertical-align: top;
+}
+
+.markdown-rendered pre {
+  max-height: auto !important;
 }
